sources = [
    'actor.cpp',
    'application.cpp',
    'collision.cpp',
    'creature.cpp',
    'font.cpp',
    'game.cpp',
    'level.cpp',
    'main.cpp',
    'particlesystem.cpp',
    'player.cpp',
    'root.cpp',
    'sprite.cpp',
    'textures.cpp',
    'types.cpp',
    'visible.cpp',
    'world.cpp'
]

executable('strange-fruits',
    sources,
    dependencies: [
        dependency('gl'),
        dependency('sdl'),
        dependency('sdl_ttf'),
        dependency('sdl_image')
    ]
)
