sources = [
    'actor.cpp',
    'application.cpp',
    'creature.cpp',
    'level.cpp',
    'main.cpp',
    'particlesystem.cpp',
    'player.cpp',
    'root.cpp',
    'sprite.cpp',
    'textures.cpp',
    'types.cpp',
    'visible.cpp',
    'world.cpp'
]

executable('strange-fruits',
    sources,
    dependencies: [
        dependency('gl'),
        dependency('sdl2'),
        dependency('sdl2_ttf'),
        dependency('sdl2_image')
    ]
)
